lombok and logging adding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.port = 8080
 
 management.endpoints.web.exposure.include=*
+
+logging.level.root=info
+logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint} %clr([%-30thread]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
+logging.logback.rollingpolicy.max-file-size=1MB
+logging.logback.rollingpolicy.max-history=10
+logging.file.name=logFile.log
