--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port = 8080
 
+spring.redis.host=localhost
+spring.redis.port=6379
+
 management.endpoints.web.exposure.include=*
 
 logging.level.root=info
