--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,16 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.0.4</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+        </dependency>
 <!--lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
