--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
             <version>3.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>5.1.0</version>
+        </dependency>
 <!--lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
