R2dbc adding for h2 and refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 server.port = 8080
 
-spring.redis.host=localhost
-spring.redis.port=6379
-
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
+spring.r2dbc.url=r2dbc:h2:mem:///~/db/testdb
+spring.r2dbc.driverClassName=org.h2.Driver
+spring.r2dbc.username=sa
+spring.r2dbc.password=password
+spring.r2dbc.initialization-mode=always
+logging.level.io.r2dbc.h2=DEBUG
+spring.liquibase.url=jdbc:h2:mem:~/db/testdb;DB_CLOSE_DELAY=-1
+spring.liquibase.user=sa
+spring.liquibase.password=password
+spring.liquibase.enabled=true
 
 management.endpoints.web.exposure.include=*
 
