--- a/pom.xml
+++ b/pom.xml
@@ -41,15 +41,15 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
       <version>3.1.0</version>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-redis</artifactId>
-      <version>3.0.4</version>
-    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <version>3.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-r2dbc</artifactId>
       <version>3.2.0</version>
     </dependency>
     <dependency>
@@ -58,9 +58,9 @@
       <version>2.2.224</version>
     </dependency>
     <dependency>
-      <groupId>redis.clients</groupId>
-      <artifactId>jedis</artifactId>
-      <version>5.1.0</version>
+      <groupId>io.r2dbc</groupId>
+      <artifactId>r2dbc-h2</artifactId>
+      <version>1.0.0.RELEASE</version>
     </dependency>
     <!--lombok-->
     <dependency>
