--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.r2dbc.driverClassName=org.h2.Driver
 spring.r2dbc.username=sa
 spring.r2dbc.password=password
 spring.r2dbc.initialization-mode=always
-logging.level.io.r2dbc.h2=DEBUG
+logging.level.io.r2dbc.h2=INFO
 spring.liquibase.url=jdbc:h2:mem:~/db/testdb;DB_CLOSE_DELAY=-1
 spring.liquibase.user=sa
 spring.liquibase.password=password
@@ -16,6 +16,6 @@ management.endpoints.web.exposure.include=*
 
 logging.level.root=info
 logging.pattern.console=%clr(%d{yy-MM-dd E HH:mm:ss.SSS}){blue} %clr(%-5p) %clr(${PID}){faint} %clr(---){faint} %clr([%-30thread]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n
-logging.logback.rollingpolicy.max-file-size=1MB
-logging.logback.rollingpolicy.max-history=10
-logging.file.name=logFile.log
+#logging.logback.rollingpolicy.max-file-size=1MB
+#logging.logback.rollingpolicy.max-history=10
+#logging.file.name=logFile.log
