--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <version>3.2.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -62,6 +67,7 @@
       <artifactId>r2dbc-h2</artifactId>
       <version>1.0.0.RELEASE</version>
     </dependency>
+
     <!--lombok-->
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -128,7 +134,6 @@
           </annotationProcessorPaths>
         </configuration>
       </plugin>
-
     </plugins>
   </build>
 
